--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Page</title>
     <link rel="stylesheet" href="main_menu/css/style.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/344/top-menu.png">
 </head>
 
 <body>
@@ -72,7 +73,7 @@
     </div>
 
 
-    <script src="main_menu/script/button_switch.js"></script>
+    <script src="main_menu/js/buttons_switch.js"></script>
 </body>
 
 </html>
