Main page (updated 6/29/2022)

--- a/index.html
+++ b/index.html
@@ -11,20 +11,32 @@
 </head>
 
 <body>
+    <header>
+        <span>
+
+            <img src="https://img.icons8.com/color/48/000000/home.png" alt="home"> <b>Page</b>
+
+        </span>
+    </header>
+
 
     <div class="container">
         <section>
             <h1>Sport Schedule : </h1>
+
             <p>
                 What’s so hard about scheduling games?
                 The phone rings and you simply
                 plug in the first, second, and
                 third teams that call. You’re done in a jiffy.
-                If it were only that simple. There are, however, a number of considerations to this seemingly
+                If it were only that simple. There are, however, a number of considerations to this
+                seemingly
                 straight-forward task which might make it easier.
 
-                It is not unusual for many leagues to provide the basic schedule for all sports and an athletic director
-                simply has to find opponents for non-league, open dates. This is a great start if you find yourself in
+                It is not unusual for many leagues to provide the basic schedule for all sports and an
+                athletic director
+                simply has to find opponents for non-league, open dates. This is a great start if you find
+                yourself in
                 this situation.
             </p>
             <button>
@@ -34,9 +46,12 @@
         <section>
             <h1>Time Zones : </h1>
             <p>
-                A time zone is an area that observes a uniform standard time for legal, commercial and social purposes.
-                Time zones tend to follow the boundaries between countries and their subdivisions instead of strictly
-                following longitude, because it is convenient for areas in frequent communication to keep the same time.
+                A time zone is an area that observes a uniform standard time for legal, commercial and
+                social purposes.
+                Time zones tend to follow the boundaries between countries and their subdivisions instead of
+                strictly
+                following longitude, because it is convenient for areas in frequent communication to keep
+                the same time.
             </p>
             <button>
                 Go to Time Zones
@@ -45,8 +60,10 @@
         <section>
             <h1>Realtime Weather : </h1>
             <p>
-                How do forecasters predict the weather? They look at the weather happening now and determine how it will
-                change over time. Comprehensive and current weather data means more accurate predictions, and data that
+                How do forecasters predict the weather? They look at the weather happening now and determine
+                how it will
+                change over time. Comprehensive and current weather data means more accurate predictions,
+                and data that
                 updates in real time is best.
             </p>
             <button>
@@ -59,8 +76,10 @@
                 How can you tell when weather conditions will be best for astronomy?
                 We reveal what to look out for and
                 how to use the UK Met Office forecasts to help. <br>
-                Nothing affects our ability to view the night sky more than the weather. Unless the sky conditions are
-                favourable, hands-on astronomy is impossible, so the ability to recognise a potentially good opportunity
+                Nothing affects our ability to view the night sky more than the weather. Unless the sky
+                conditions are
+                favourable, hands-on astronomy is impossible, so the ability to recognise a potentially good
+                opportunity
                 for viewing or imaging in advance is very useful indeed.
             </p>
             <button>
@@ -72,7 +91,28 @@
 
     </div>
 
+    <footer>
 
+        <h2>
+
+            <a href="https://github.com/7Prince11" target="_blank">
+                <img src="https://img.icons8.com/ios-glyphs/344/github.png" alt="github" />
+            </a>
+        </h2>
+        <h2>
+            <a href="https://www.codewars.com/users/7Prince11" target="_blank">
+                <img src="https://www.codewars.com/packs/assets/logo.61192cf7.svg" alt="codewars" />
+            </a>
+        </h2>
+
+        <h2>
+            <a href="mailto:fazzytron@gmail.com" target="_blank">
+                <img src="https://img.icons8.com/color/48/gmail-login.png" alt="gmail" />
+            </a>
+        </h2>
+
+
+    </footer>
     <script src="main_menu/js/buttons_switch.js"></script>
 </body>
 
