--- a/astronomy/index.html
+++ b/astronomy/index.html
@@ -37,6 +37,7 @@
     </div>
 
     <footer>
+        <button> <a href="../index.html"> Main Page </a> </button>
         <button> <a href="../sport_api/index.html"> Sport Schedule</a> </button>
         <button> <a href="../time_zone_api/index.html"> Time Zones</a> </button>
         <button> <a href="../weather_rn/index.html"> Realtime Weather </a> </button>
