--- a/sport_api/index.html
+++ b/sport_api/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API | Sport</title>
+    <title>Sport Schedule</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/material-outlined/344/view-shedule.png">
 </head>
@@ -27,7 +27,11 @@
 
     </div>
     <footer>
-        <button> <a href="../time_zone_api/index.html"> TimeZone </a> </button>
+        <button> <a href="../index.html"> Main Page </a> </button>
+        <button> <a href="../time_zone_api/index.html"> Time Zones </a> </button>
+        <button> <a href="../weather_rn/index.html"> Realtime Weather</a> </button>
+        <button> <a href="../astronomy/index.html"> Astronomy </a> </button>
+
     </footer>
     <script type="text/javascript" src="script/sport.js"></script>
 </body>
