--- a/time_zone_api/index.html
+++ b/time_zone_api/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API | TimeZone</title>
+    <title>TimeZone</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon"
         href="https://img.icons8.com/external-itim2101-fill-itim2101/344/external-time-zone-time-management-itim2101-fill-itim2101.png">
@@ -38,7 +38,10 @@
     </div>
 
     <footer>
+        <button> <a href="../index.html"> Main Page </a> </button>
         <button> <a href="../sport_api/index.html"> Sport Schedule</a> </button>
+        <button> <a href="../weather_rn/index.html"> Realtime Weather</a> </button>
+        <button> <a href="../astronomy/index.html"> Astronomy </a> </button>
     </footer>
 
     <script type="text/javascript" src="script/zone.js"></script>
