The Realtime Weather (updated 6/29/2022)

--- a/weather_rn/index.html
+++ b/weather_rn/index.html
@@ -37,8 +37,10 @@
     </div>
 
     <footer>
+        <button> <a href="../index.html"> Main Page </a> </button>
         <button> <a href="../sport_api/index.html"> Sport Schedule</a> </button>
         <button> <a href="../time_zone_api/index.html"> Time Zones</a> </button>
+        <button> <a href="../astronomy/index.html"> Astronomy </a> </button>
     </footer>
 
     <script type="text/javascript" src="js/weatherRn.js"></script>
