--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="theme-color" content="#226">
     <title>Main Page</title>
     <link rel="stylesheet" href="main_menu/css/style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/344/top-menu.png">
@@ -14,7 +17,8 @@
     <header>
         <span>
 
-            <img src="https://img.icons8.com/color/48/000000/home.png" alt="home"> <b>Page</b>
+            <img src="https://img.icons8.com/color/48/000000/home.png" alt="home">
+            <h1>Page</h1>
 
         </span>
     </header>
@@ -22,7 +26,7 @@
 
     <div class="container">
         <section>
-            <h1>Sport Schedule : </h1>
+            <h2>Sport Schedule : </h2>
 
             <p>
                 What’s so hard about scheduling games?
@@ -44,7 +48,7 @@
             </button>
         </section>
         <section>
-            <h1>Time Zones : </h1>
+            <h2>Time Zones : </h2>
             <p>
                 A time zone is an area that observes a uniform standard time for legal, commercial and
                 social purposes.
@@ -58,7 +62,7 @@
             </button>
         </section>
         <section>
-            <h1>Realtime Weather : </h1>
+            <h2>Realtime Weather : </h2>
             <p>
                 How do forecasters predict the weather? They look at the weather happening now and determine
                 how it will
@@ -71,7 +75,7 @@
             </button>
         </section>
         <section>
-            <h1>Astronomy Weather : </h1>
+            <h2>Astronomy Weather : </h2>
             <p>
                 How can you tell when weather conditions will be best for astronomy?
                 We reveal what to look out for and
