--- a/sport_api/index.html
+++ b/sport_api/index.html
@@ -19,11 +19,9 @@
     <div id="container">
 
         <div id="football">
-            <h1>Football</h1>
+            <h1>Soccer</h1>
         </div>
-        <div id="golf">
-            <h1>Golf</h1>
-        </div>
+    
 
     </div>
     <footer>
